Fix text overflow on friend's name

--- a/view/src/component/friendSelector.css
+++ b/view/src/component/friendSelector.css
@@ -62,6 +62,10 @@
 	font-size: 1em;
 	line-height: 60px;
 	color: #525252;
+	width: calc(100% - 110px);
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 #friend-selector > .friend.focus > .friend-name {
 	color: #ee5253;
